--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<body>
 <!-- Modals Start -->
 <!-- The ScienceSites modal -->
-		<div class="modal fade" id="testModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel-1">
+		<div class="modal fade" id="sciencesitesModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel-1">
 			<div class="modal-dialog" role="document">
 				<div class="modal-content">
 					<div class="modal-header">
@@ -47,7 +47,7 @@
 			</div>
 		</div>
 <!-- The Linguistica 360 modal -->		
-		<div class="modal fade" id="nissanModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel-2">
+		<div class="modal fade" id="linguistica360Modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel-2">
 			<div class="modal-dialog" role="document">
 				<div class="modal-content">
 					<div class="modal-header">
@@ -77,7 +77,7 @@
 			</div>
 		</div>
 <!-- The The Clique Intelligence modal -->
-		<div class="modal fade" id="isuzuModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel-3">
+		<div class="modal fade" id="cliqueintelligenceModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel-3">
 			<div class="modal-dialog" role="document">
 				<div class="modal-content">
 					<div class="modal-header">
@@ -115,7 +115,7 @@
 			</div>
 		</div>
 <!-- The APS modal -->
-		<div class="modal fade" id="datsunModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel-4">
+		<div class="modal fade" id="apsModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel-4">
 			<div class="modal-dialog" role="document">
 				<div class="modal-content">
 					<div class="modal-header">
@@ -182,7 +182,7 @@
 				<div class="modal-content">
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-						<h3 class="modal-title" id="myModalLabel-5">Niklas Rundquist</h3>
+						<h3 class="modal-title" id="myModalLabel-6">Niklas Rundquist</h3>
 						<h4>Web Designer and Developer</h4>
 						<h5>69 Putnam Street #3 • East Boston, MA 02128 • (978) 290-8852 • <a href="mailto:#">niklas.rundquist@gmail.com</a></h5>
 						<h5>LinkedIn: <a href="https://www.linkedin.com/in/niklasrundquist" target="_blank">www.linkedin.com/in/niklasrundquist</a></h5>
@@ -343,7 +343,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-12">
-					<img class="img-responsive panorama" src="images/panorama-1600_large_2x.jpg" alt="Stormy waters">
+					<img class="img-responsive panorama" src="images/panorama-1600_large_2x.jpg" alt="Domsten, Sweden">
 				</div>
 			</div>
 			<main>
@@ -355,7 +355,7 @@
 					</div>
 					<div class="row">
 						<div class="col-xs-6 col-sm-6 col-md-3">
-							<a class="thumbnail" data-toggle="modal" data-target="#testModal">
+							<a class="thumbnail" data-toggle="modal" data-target="#sciencesitesModal" tabindex="0">
 								<figure>
 									<img class="img-responsive center-block" src="images/ss-logo.png" alt="ScienceSites">
 									<figcaption><h4 class="text-muted text-center">ScienceSites</h4></figcaption>
@@ -363,7 +363,7 @@
 							</a>
 						</div>						
 						<div class="col-xs-6 ol-sm-6 col-md-3">
-							<a class="thumbnail" data-toggle="modal" data-target="#nissanModal">
+							<a class="thumbnail" data-toggle="modal" data-target="#linguistica360Modal" tabindex="0">
 								<figure>
 									<img class="img-responsive center-block" src="images/l360-logo.png" alt="Linguistica 360">
 									<figcaption><h4 class="text-muted text-center">Linguistica 360</h4></figcaption>
@@ -371,7 +371,7 @@
 							</a>
 						</div>
 						<div class="col-xs-6 col-sm-6 col-md-3">
-							<a class="thumbnail" data-toggle="modal" data-target="#isuzuModal">
+							<a class="thumbnail" data-toggle="modal" data-target="#cliqueintelligenceModal" tabindex="0">
 								<figure>
 									<img class="img-responsive center-block" src="images/ci-logo.png" alt="Clique Intelligence">
 									<figcaption><h4 class="text-muted text-center">Clique Intelligence</h4></figcaption>
@@ -379,7 +379,7 @@
 							</a>
 						</div>
 						<div class="col-xs-6 col-sm-6 col-md-3">
-							<a class="thumbnail" data-toggle="modal" data-target="#datsunModal">
+							<a class="thumbnail" data-toggle="modal" data-target="#apsModal" tabindex="0">
 								<figure>
 									<img class="img-responsive center-block" src="images/aps-logo.png" alt="Advanced Practice Strategies">
 									<figcaption><h4 class="text-muted text-center">Advanced Practice Strategies</h4></figcaption>
