--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 						<h4 class="modal-title" id="myModalLabel-3">Clique Intelligence</h4>
 						<p>Clique Intelligence developed business collaboration and communication software. I worked mostly with usability testing and interaction design.</p>
-						<p>Clique Intelligence shut down in April  2015.</p>
+						<p>Clique Intelligence was a joint venture startup formed by DreamWorks Animation and Hewlett-Packard. It closed in April 2015.</p>
 					</div>
 					<div class="modal-body">
 						<figure>						
